--- a/_posts/0000-01-02-MaCherni.md
+++ b/_posts/0000-01-02-MaCherni.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-"to be or not to be"
+"to be or not to be" Hamlet
 Use the left arrow to go back!
